# practice_rag

./: README.md  pyproject.toml
scripts/: chunker.py  embeder.py  vectordb.py
scripts/data/crawlers_json/: certifications.json  contact.json  flagship-program.json  flagship-program_courses.json  flagship-program_courses_AI-101.json  flagship-program_courses_AI-201.json  flagship-program_courses_AI-202.json  flagship-program_courses_AI-301.json  flagship-program_courses_AI-451.json  flagship-program_courses_AI-461.json  flagship-program_courses_AI-500.json  flagship-program_courses_AI-501.json  flagship-program_courses_AI-502.json  flagship-program_courses_AI-651.json  home.json  login.json  panaversity_guide_pdf.json  privacy-policy.json  register.json  scraped_content_summary.json  team.json  terms-and-conditions.json
scripts/data/rag_ready/: rag_ready_data.json
src/practice_rag/: __init__.py  main.py
